chainsaw/tests/roundrobin-ingress-resourceref/testdata/gslb.yaml
---
apiVersion: k8gb.absa.oss/v1beta1
kind: Gslb
metadata:
  name: roundrobin-ingress-resourceref
spec:
  resourceRef:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    name: roundrobin-ingress-resourceref
  strategy:
    type: roundRobin
    dnsTtlSeconds: 5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundrobin-ingress-resourceref
spec:
  ingressClassName: nginx
  rules:
    - host: roundrobin-ingress-resourceref.cloud.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-podinfo
              port:
                name: http
